test/lattests/extensions/objects1/bad/newOffNonexistentType.lat
int main() {
    int x = new a;
    return 0;
}